
4.25  2013-08-17

4.24  2013-08-08
  - Added ancestors method to Mojo::DOM.
  - Fixed bug where Mojo::IOLoop::Stream timeout was not always available.

4.23  2013-08-01
  - Added redirects method to Mojo::Transaction::HTTP.

4.22  2013-07-30
  - Improved Mojo::Server to use FindBin more defensively.
  - Fixed empty attribute bug in Mojo::DOM::CSS.
  - Fixed partial route handling in routes command.

4.21  2013-07-29
  - Added strip method to Mojo::DOM.
  - Fixed return values of remove and replace methods in Mojo::DOM.

4.20  2013-07-28
  - Deprecated Mojo::DOM::attrs in favor of Mojo::DOM::attr.
  - Improved Mojo::UserAgent connection management to be fork-safe.

4.19  2013-07-21
  - Improved invalid tag handling in Mojo::DOM::HTML.

4.18  2013-07-08
  - Added --mode option to Morbo.
  - Fixed bug in Mojo::UserAgent where not all 2xx responses would be accepted
    for CONNECT requests.

4.17  2013-07-04
  - Updated jQuery to version 2.0.3.
  - Improved Mojo::IOLoop::Server to use Perfect Forward Secrecy for TLS.
  - Fixed Mojo::Transaction::WebSocket to generate RFC 6455 compliant
    Sec-WebSocket-Key headers. (josh)
  - Fixed bug where not all uppercase methods were hidden from the router.

4.16  2013-06-19
  - Improved Perl 5.10.x and 5.12.x compatibility. (trinitum)

4.15  2013-06-18
  - Added around_action hook.
  - Improved ojo to make the current controller object available to actions
    as $_. (jberger, sri)
  - Fixed a few error reporting bugs in Mojo::IOLoop::Client and
    Mojo::IOLoop::Server.
  - Fixed small emit_chain bug in Mojolicious::Plugins.

4.14  2013-06-10
  - Improved url_for performance slightly.
  - Fixed bug where match attribute and render_later method were not hidden
    from the router.

4.13  2013-06-09
  - Replaced ua method in Mojolicious::Controller with a helper.
  - Fixed url_for support for absolute URLs without scheme or authority.
    (bduggan, sri)

4.12  2013-06-07